fix sidenav collapse/expand button

--- a/apps/dsp-app/src/app/project/project.component.scss
+++ b/apps/dsp-app/src/app/project/project.component.scss
@@ -126,12 +126,14 @@ mat-sidenav {
 
       mat-icon {
         font-size: 16px;
+        height: 16px;
+        width: 16px;
       }
 
-      // material injects this wrapper with a line-height that is too large
-      /* TODO(mdc-migration): The following rule targets internal classes of button that may no longer apply for the MDC version.*/
-      ::ng-deep .mat-button-wrapper {
-        line-height: initial;
+      // for such a small button, we need to disable the large touch target
+      ::ng-deep .mat-mdc-button-touch-target {
+        height: 0px !important;
+        width: 0px !important;
       }
     }
   }
@@ -167,12 +169,14 @@ mat-sidenav-content {
 
       mat-icon {
         font-size: 16px;
+        height: 16px;
+        width: 16px;
       }
 
-      // material injects this wrapper with a line-height that is too large
-      /* TODO(mdc-migration): The following rule targets internal classes of button that may no longer apply for the MDC version.*/
-      ::ng-deep .mat-button-wrapper {
-        line-height: initial;
+      // for such a small button, we need to disable the large touch target
+      ::ng-deep .mat-mdc-button-touch-target {
+        height: 0px !important;
+        width: 0px !important;
       }
     }
   }
